src/objects/Funding_Position__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Positions</relationshipLabel>
        <relationshipName>Funding_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountPurachaseStamp__c</fullName>
        <label>AmountPurachaseStamp</label>
        <summarizedField>Funding_Position_Detail__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Funding_Position_Detail__c.Detail_Type__c</field>
            <operation>equals</operation>
            <value>Purchase Stamp Duty</value>
        </summaryFilterItems>
        <summaryForeignKey>Funding_Position_Detail__c.Funding_Position__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Borrower_Contributions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Borrower Contributions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Client Legal Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Home_Owner_Concessions_and_Grants__c</fullName>
        <defaultValue>0</defaultValue>
        <label>First Home Owner Concessions and Grants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Requested_Inc_LMI__c</fullName>
        <formula>Funds_Requested__c +  LMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Requested Inc LMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Requested__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Required__c</fullName>
        <formula>Summary_From_Details__c +  Lender_Set_Up_Fees__c +  Client_Legal_Fees__c +  Other_Sundries__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_Set_Up_Fees__c</fullName>
        <label>Lender Set Up Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Surplus__c</fullName>
        <formula>Funds_Requested__c +  First_Home_Owner_Concessions_and_Grants__c +  Borrower_Contributions__c -  Funds_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Surplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funding Positions</relationshipLabel>
        <relationshipName>Funding_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Sundries__c</fullName>
        <label>Other Sundries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Summary_From_Details__c</fullName>
        <label>Summary From Details</label>
        <summarizedField>Funding_Position_Detail__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Funding_Position_Detail__c.Category__c</field>
            <operation>equals</operation>
            <value>Debt, Other, Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Funding_Position_Detail__c.Funding_Position__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Funding Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Funding Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>